--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 # 소스파일 및 헤더파일 목록
-set(SRCS includes/minishell.h srcs/minishell.c srcs/cd.c srcs/pwd.c srcs/echo.c)
+set(SRCS includes/minishell.h srcs/minishell.c srcs/ms_cd.c srcs/ms_pwd.c srcs/ms_echo.c srcs/ms_env.c srcs/ms_env_utils.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
