--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.25)
 set(NAME minishell_test)
 
 # 소스 파일 목록
-set(SRCS minishell_test.cpp cd_test.cpp pwd_test.cpp echo_test.cpp env_test.cpp)
+set(SRCS minishell_test.cpp cd_test.cpp pwd_test.cpp echo_test.cpp env_test.cpp ft_strcmp_test.cpp)
 
 add_executable(${NAME} ${SRCS})
 
