--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 11)
 enable_testing()
 
 add_subdirectory(libft)
+add_subdirectory(~/./usr/local/lib/readline)
 
 # add_subdirectory(googletest)
 include(FetchContent)
@@ -20,7 +21,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 # 소스파일 및 헤더파일 목록
-set(SRCS includes/minishell.h srcs/minishell.c)
+set(SRCS includes/minishell.h srcs/minishell.c srcs/init_clear.c srcs/separate_line.c srcs/tokenize.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
