--- a/libft/CMakeLists.txt
+++ b/libft/CMakeLists.txt
@@ -47,7 +47,8 @@ set(SRCS
         includes/ft_printf.h
         includes/get_next_line.h
         includes/ft_bool.h srcs/ft_strtrim.c
-        srcs/ft_memmove.c)
+        srcs/ft_memmove.c
+        srcs/ft_isalnum.c)
 
 add_library(${NAME} STATIC ${SRCS})
 
