--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ set(SRCS includes/minishell.h srcs/minishell.c
         srcs/ms_expand.c
         srcs/ms_expand_qv.c
         includes/ms_expand.h
-        srcs/ms_expand_qv_utils.c)
+        srcs/ms_expand_qv_utils.c
+        srcs/ms_expand_aster.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
