--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 # 소스파일 및 헤더파일 목록
-set(SRCS includes/minishell.h includes/ms_env.h srcs/minishell.c srcs/builtin/ms_cd.c srcs/builtin/ms_pwd.c srcs/builtin/ms_echo.c srcs/env/ms_env_lst.c srcs/env/ms_env_serialize_utils.c srcs/env/ms_env_lst_utils.c srcs/builtin/ms_export.c srcs/env/ms_env_serialize.c srcs/builtin/ms_unset.c srcs/builtin/ms_env.c srcs/builtin/ms_exit.c)
+set(SRCS includes/minishell.h includes/ms_env.h srcs/minishell.c srcs/builtin/ms_cd.c srcs/builtin/ms_pwd.c srcs/builtin/ms_echo.c srcs/env/ms_env_lst.c srcs/env/ms_env_serialize_utils.c srcs/env/ms_env_lst_utils.c srcs/builtin/ms_export.c srcs/env/ms_env_serialize.c srcs/builtin/ms_unset.c srcs/builtin/ms_env.c srcs/builtin/ms_exit.c srcs/error/ms_error.c includes/ms_error.h includes/ms_builtin.h srcs/error/ms_error_utils.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
