--- a/libft/CMakeLists.txt
+++ b/libft/CMakeLists.txt
@@ -47,7 +47,7 @@ set(SRCS
         includes/ft_type.h
         includes/ft_printf.h
         includes/get_next_line.h
-        includes/ft_bool.h srcs/ft_strtrim.c srcs/ft_strcmp.c srcs/ft_atoi.c)
+        includes/ft_bool.h srcs/ft_strtrim.c srcs/ft_strcmp.c srcs/ft_atoi.c srcs/ft_alnum.c srcs/ft_isnumeric.c)
 
 add_library(${NAME} STATIC ${SRCS})
 
