✨ Builtin 기능 구현 (#8)
* :construction: temp add for libft

* :art: add space between words

* :art: change 0 to EXIT_SUCCESS

* 🌱 init cd

* :art: add echo with no argv

* 📝 add todo comments

* ✨ add cd and ✨ add ft_strrchr.c

* ✨ add pwd

* 📝 add comments

* 📝 add comments

* ♻️ change function name ✨ add t_env and utils

* :white_check_mark: add env serialize test

* ♻️ change comment message in echo, pwd

* ✨ add ft_strcmp :white_check_mark: add ft_strcmp test

* ✨ add setenv and getenv

* ✨ change ms_pwd using t_env

* :art: change ms_pwd args

* 🌱 migration

* 🙈 add .gitignore

* ✨ add error 함수

* :art: add funcs in header

* :art: add errno reset

* ♻️ change env using errno

* :art: add ft_header

* ♻️ change pwd use errno

* ♻️ change unset use errno

* :art: rebuild for test

* :art: add 42header

* ♻️ change export use errno

* 📝 add comments for errno

* ♻️ refactoring export

* ♻️ change cd use errno

* :art: add env use errno

* :art: add 42header

* ✨ add syntax error

* :art: change env logic

* ✏️ norminette

* :art: env execve 실패시 메모리 해제

* :art: exit 에러메시지 수정

* ♻️ exit 기능 리펙토링

* ♻️ export에서 noval일 때 처리 로직 수정

* :art: change export 로직

* :art: norminette

* :art: 헤더파일에 누락함수 추가

---------

Co-authored-by: Jeongwoo Park <jeongwpa@cx2r6s7.42seoul.kr>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,11 @@ cmake_minimum_required(VERSION 3.25)
 set(NAME minishell_test)
 
 # 소스 파일 목록
-set(SRCS minishell_test.cpp)
+set(SRCS minishell_test.cpp cd_test.cpp pwd_test.cpp echo_test.cpp env_test.cpp ft_strcmp_test.cpp export_test.cpp unset_test.cpp error_test.cpp exit_test.cpp)
 
 add_executable(${NAME} ${SRCS})
 
-target_link_libraries(${NAME} PUBLIC minishell gtest_main)
+target_link_libraries(${NAME} PUBLIC minishell libft gtest_main)
 
 add_test(
         NAME ${NAME}
