--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,11 +39,10 @@ set(SRCS includes/minishell.h
         includes/ms_builtin.h
         srcs/error/ms_error_utils.c
         srcs/expand/ms_expand.c
-        srcs/expand/ms_expand_qv.c
         includes/ms_expand.h
-        srcs/expand/ms_expand_qv_utils.c
-        srcs/expand/ms_expand_aster.c
-)
+        srcs/expand/ms_expand_quote.c
+        srcs/expand/ms_expand_wildcard.c
+        srcs/expand/ms_expand_env.c srcs/expand/ms_expand_escape.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
