--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(SRCS includes/minishell.h
         srcs/expand/ms_expand_quote.c
         srcs/expand/ms_expand_wildcard.c
         srcs/expand/ms_expand_env.c srcs/expand/ms_expand_escape.c srcs/expand/ms_expand_lst.c srcs/expand/ms_expand_wildcard_utils.c
-        srcs/expand/ms_expand_wildcard_dir.c)
+        srcs/expand/ms_expand_wildcard_dir.c srcs/expand/ms_expand_wildcard_dir.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
