--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,11 +15,11 @@ set(SRCS minishell_test.cpp
         unset_test.cpp
         error_test.cpp
         exit_test.cpp
-        expand_param_test.cpp expand_filename_test.cpp)
+        expand_param_test.cpp expand_filename_test.cpp main.cpp)
 
 add_executable(${NAME} ${SRCS})
 
-target_link_libraries(${NAME} PUBLIC minishell libft gtest_main)
+target_link_libraries(${NAME} PUBLIC minishell libft gtest)
 
 add_test(
         NAME ${NAME}
