Expand 기능 구현 (#10)
* 🌱 init expand

* ✨ add expand_env

* 🎨 change 파일 구조

* 🌱 init ms_expand_aster

* :art: change dir

* :art: norm

* ✨ add expand env

* :art: add expand error

* :art: change dquote escape logic

* ♻️ change 파일구조

* ✏️ norminette

* ✨ change expand use Linked List

* ✨ add 기본 와일드카드

* :art: rename expand to wildcard

* ✏️ norminette

* :art: delete 안쓰는 함수 삭제

* :art: remove . ..

* :art: separate prefix and match

* :art: rollback path, prefix, suffix로 나뉨

* :art: add *extend 가 NULL일 떄

* :art: fix combine

* :art: add is_hidden

* :construction: add 와일드카드 파싱 안될 시 변경하지 않기

* 🎨 수정 완료

* 🎨norminette

* 🎨chagne 변수 이름

* 🎨 refactoring ms_wildcard_replace

* 🎨 refactoring ms_wildcard_replace

* 🎨 refactoring ms_expande

* 🎨 refactoring ms_expand

* 🎨 refactoring ms_expand

* ✅ change test in cd

* 📝 42 header

* 📝 42 header

* :art: add depth to decide replace or remove

* ✏️ typos

* ✏️ typos

* ✨ suffix도 검사

* ♻️ refactoring * 매칭 안되도 계속 확장

* ♻️ 에러처리 완료

* ✨ exp 구조체 선언, 0 종료코드 반환

* ❎ add failed test

* :art: return new

* :art: tilde

* :art: tilde

* ✨ add expand param

* 🌱 init expand filename

* :art: add filename

* :construction: work in progress

* :art: globbing

* :art: globbing

* :art: 폴더 엔트리 없으면 리턴

* :art: 앞에 주소 제대로 붙을 수 있도로 수정

* ❎ add failed test: BFS 동작 오류

* ✅ pass test: 폴더 아니면 제외

* :art: 숨김파일 추가

* :art: 변수 치환시 따옴표

* :art: Glob처리할 때 큰 따옴표 제거

* 📝 add todo

* :art: 따옴표 수정

* :art: add ///////

* :art: 메모리 누수 해결

* :art: add todo

* ❎ add failed test

* :art: 없는 폴더 혹은 파일 처리 ♻️ 리펙토링

* ✅ add test

* ♻️ norm

* :art: 파일명 수정

* ✏️ typos

* ❎ add failed test

* ❎ failed test

* :art: quote dquote 분리

* :art: quote 해결

* :art: globbing수정

* ✏️ typos

* :art: fix max_depth

* :art: add pattern in queue

* :construction: wildcard pattern matching

* :construction: wildcard pattern matc

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,11 +3,23 @@ cmake_minimum_required(VERSION 3.25)
 set(NAME minishell_test)
 
 # 소스 파일 목록
-set(SRCS minishell_test.cpp cd_test.cpp pwd_test.cpp echo_test.cpp env_test.cpp ft_strcmp_test.cpp export_test.cpp unset_test.cpp error_test.cpp exit_test.cpp)
+set(SRCS minishell_test.cpp
+        ft_memmove_test.cpp
+        minishell_test.cpp
+        cd_test.cpp
+        pwd_test.cpp
+        echo_test.cpp
+        env_test.cpp
+        ft_strcmp_test.cpp
+        export_test.cpp
+        unset_test.cpp
+        error_test.cpp
+        exit_test.cpp
+        expand_param_test.cpp expand_filename_test.cpp main.cpp expand_test.cpp)
 
 add_executable(${NAME} ${SRCS})
 
-target_link_libraries(${NAME} PUBLIC minishell libft gtest_main)
+target_link_libraries(${NAME} PUBLIC minishell libft gtest)
 
 add_test(
         NAME ${NAME}
