✅ add null terminate in quote removal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ set(SRCS includes/ms_minishell.h
         srcs/parser/ms_unterminal.c
         srcs/parser/ms_clear.c
         srcs/parser/ms_terminal.c
-        srcs/expand/ms_expand_utils.c srcs/expand/ms_expand_param_utils.c srcs/expand/ms_expand_filenames.c srcs/expand/ms_queue.c srcs/expand/ms_queue_utils.c srcs/expand/ms_expand_filename.c srcs/expand/ms_expand_filename_search.c srcs/expand/ms_glob.c srcs/expand/ms_expand_filename_expand.c srcs/expand/ms_expand_filename_match1.c srcs/expand/ms_expand_filename_utils.c srcs/expand/ms_glob_utils.c srcs/expand/ms_expand_filename_match2.c
-        srcs/exec/ms_exec_fd.c srcs/exec/ms_exec_heredoc.c srcs/exec/ms_exec_heredoc_before.c srcs/exec/ms_exec_init_clear.c srcs/exec/ms_exec_io_redirect.c srcs/exec/ms_exec_path.c srcs/exec/ms_exec_pipeline.c srcs/exec/ms_exec_utils.c)
+        srcs/expand/ms_expand_param_utils.c srcs/expand/ms_expand_filenames.c srcs/expand/ms_queue.c srcs/expand/ms_queue_utils.c srcs/expand/ms_expand_filename.c srcs/expand/ms_expand_filename_search.c srcs/expand/ms_glob.c srcs/expand/ms_expand_filename_expand.c srcs/expand/ms_expand_filename_match1.c srcs/expand/ms_expand_filename_utils.c srcs/expand/ms_glob_utils.c srcs/expand/ms_expand_filename_match2.c
+        srcs/exec/ms_exec_fd.c srcs/exec/ms_exec_heredoc.c srcs/exec/ms_exec_heredoc_before.c srcs/exec/ms_exec_init_clear.c srcs/exec/ms_exec_io_redirect.c srcs/exec/ms_exec_path.c srcs/exec/ms_exec_pipeline.c srcs/exec/ms_exec_utils.c srcs/exec/ms_exec_utils2.c srcs/exec/ms_quote_removal_dup.c)
 
 add_library(${NAME} STATIC ${SRCS})
 target_include_directories(${NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/includes)
